metacity: add missing dependency on zenity.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72537 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/metacity/Portfile
+++ b/dports/gnome/metacity/Portfile
@@ -22,6 +22,7 @@ depends_lib     port:gconf \
                 port:startup-notification \
                 port:libgtop \
                 port:libcanberra \
+                port:zenity \
                 port:xorg-libsm
 
 depends_build   port:gnome-doc-utils \
