--- a/dports/devel/valgrind-devel/Portfile
+++ b/dports/devel/valgrind-devel/Portfile
@@ -3,8 +3,8 @@
 PortSystem 1.0
 
 name            valgrind-devel
-svn.revision    11349
-set vex_revision 2032
+svn.revision    11446
+set vex_revision 2066
 version         3.6.0-r${svn.revision}
 categories      devel
 platforms       darwin
@@ -22,12 +22,12 @@ depends_build   bin:perl:perl5
 # as they are only used for tests
 
 fetch.type      svn
-svn.url         svn://svn.valgrind.org/valgrind/trunk
+svn.url         svn://svn.valgrind.org/valgrind/branches/VALGRIND_3_6_BRANCH
 svn.args        --ignore-externals
-worksrcdir      trunk
+worksrcdir      VALGRIND_3_6_BRANCH
 
 post-fetch {
-    system "cd ${worksrcpath} && ${svn.cmd} ${svn.pre_args} ${svn.method} svn://svn.valgrind.org/vex/trunk@${vex_revision} VEX"
+    system "cd ${worksrcpath} && ${svn.cmd} ${svn.pre_args} ${svn.method} svn://svn.valgrind.org/vex/branches/VEX_3_6_BRANCH@${vex_revision} VEX"
 }
 
 use_autoreconf yes
