gdk-pixbuf2: auto-deactivate conflicting versions of gtk2 (Let's maybe try to discuss disruptive changes beforehand in future?)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72540 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gdk-pixbuf2/Portfile
+++ b/dports/graphics/gdk-pixbuf2/Portfile
@@ -34,23 +34,12 @@ depends_lib                 path:lib/pkgconfig/glib-2.0.pc:glib2 \
                             port:jasper \
                             port:tiff
 
-pre-configure {
-    if { [file exists ${prefix}/lib/pkgconfig/gdk-pixbuf-2.0.pc] } {
-        set pixbuf_version [lindex [split [exec ${prefix}/bin/pkg-config --modversion gdk-pixbuf-2.0] . ] 1]
-        set pixbuf_min_version 22
-        if { ${pixbuf_version} < ${pixbuf_min_version} } {
-            ui_msg \
-"
-      A version of gtk2 prior to 2.${pixbuf_min_version}.0 is currently installed.
-      
-      To upgrade to gtk2 version ${version} or later, installing gdk-pixbuf2,
-      please execute these commands:
-
-          sudo port -f deactivate gtk2
-          sudo port upgrade gtk2
-"
-            return -code error "deactivate outdated gtk2 port."
-        }
+pre-activate {
+    if { [file exists ${prefix}/lib/pkgconfig/gdk-pixbuf-2.0.pc]
+        && ![catch {set vers [lindex [registry_active gtk2] 0]}]
+        && [rpm-vercomp [lindex $vers 1] 2.22.0] < 0} {
+        
+        registry_deactivate gtk2 "" [list ports_nodepcheck 1]
     }
 }
 
