Add livecheck that matches the one from the subversion portfile
git-svn-id: https://svn.macports.org/repository/macports/trunk@72541 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/subversion-python26bindings/Portfile
+++ b/dports/devel/subversion-python26bindings/Portfile
@@ -105,3 +105,7 @@ post-destroot {
 platform puredarwin {		configure.args-append \
 					--disable-keychain
 				}
+
+livecheck.type  regex
+livecheck.url   http://subversion.tigris.org/servlets/ProjectDocumentList?folderID=260&expandFolder=74
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
