--- a/dports/devel/subversion-rubybindings/Portfile
+++ b/dports/devel/subversion-rubybindings/Portfile
@@ -81,3 +81,7 @@ variant no_neon description {Build without neon (http/https support)} {
 platform puredarwin {		configure.args-append \
 					--disable-keychain
 				}
+
+livecheck.type  regex
+livecheck.url   http://subversion.tigris.org/servlets/ProjectDocumentList?folderID=260&expandFolder=74
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
