--- a/dports/devel/subversion-python25bindings/Portfile
+++ b/dports/devel/subversion-python25bindings/Portfile
@@ -100,3 +100,7 @@ post-destroot {
 		file rename "${destroot}${prefix}/lib/svn-python" \
 			"${destroot}${prefix}/lib/svn-python2.5"
 		}
+
+livecheck.type  regex
+livecheck.url   http://subversion.tigris.org/servlets/ProjectDocumentList?folderID=260&expandFolder=74
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
