--- a/dports/python/py26-antlr3/Portfile
+++ b/dports/python/py26-antlr3/Portfile
@@ -6,6 +6,7 @@ PortGroup           python26 1.0
 
 name                py26-antlr3
 version             3.1.2
+revision            1
 categories          lang python
 maintainers         singingwolfboy openmaintainer
 description         Python runtime package for ANTLR3
@@ -24,3 +25,5 @@ distname            antlr_python_runtime-${version}
 checksums           md5     1a96b0d5d18574589f9c498445f4e47c \
                     sha1    c57d4a03f80d157e9c0c1c8cd3038171900a364c \
                     rmd160  a2b1f37360bd4a82df82975a1efb75289cef6af7
+
+depends_build       port:py26-distribute
