--- a/dports/gnome/nautilus/Portfile
+++ b/dports/gnome/nautilus/Portfile
@@ -37,12 +37,17 @@ depends_run	port:desktop-file-utils \
 
 use_bzip2 	yes
 
-patchfiles      patch-nautilus-emblem-utils.c.diff \
+patchfiles      patch-configure.in.diff \
+                patch-eel-Makefile.am.diff \
+                patch-nautilus-emblem-utils.c.diff \
                 patch-nautilus-file.c.diff
+
+use_autoreconf  yes
 
 configure.args  --mandir=${prefix}/share/man \
                 --x-includes=${prefix}/include \
                 --x-libraries=${prefix}/lib \
+                --disable-silent-rules \
                 --disable-update-mimedb \
                 --disable-schemas-install \
                 --disable-packagekit
