gnome-doc-utils: make py26-libxml2 a library dependency, closes #26919.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72551 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-doc-utils/Portfile
+++ b/dports/gnome/gnome-doc-utils/Portfile
@@ -34,14 +34,14 @@ depends_build  port:intltool \
 
 depends_lib    port:gettext \
                port:libxslt \
+               port:py26-libxml2 \
                port:python26
 
 
 depends_run    port:docbook-xml \
                port:docbook-xsl \
                port:rarian \
-               port:iso-codes \
-               port:py26-libxml2
+               port:iso-codes
 
 configure.env-append  INTLTOOL_PERL=${prefix}/bin/perl
 configure.args        --disable-scrollkeeper \
