--- a/dports/science/afni/Portfile
+++ b/dports/science/afni/Portfile
@@ -4,8 +4,7 @@
 PortSystem	1.0
 
 name		        afni
-version		        2009_12_31_1431
-revision            1
+version             2010_10_19_1028
 distname	        AFNI_${version}
 categories	        science
 maintainers	        snc openmaintainer
@@ -28,9 +27,8 @@ depends_run	        port:netpbm \
 master_sites	    http://afni.nimh.nih.gov/pub/dist/tgz/AFNI_ARCHIVE/
 extract.suffix      .tgz
 
-checksums           md5     00959234f2e512cf1b16335d3ab80f1d \
-                    sha1    cfde2df4edd33ae78bcd41ae9226c44f0174c005 \
-                    rmd160  fbe9f7afc5a28fe4fa3bcba1bdc87494ca47ce85
+checksums           md5     6d3fbf60e876f01bc279fb014cd21b77 \
+                    sha1    b1df4e64e897291320b9bcc201570b1f9f9fc923
 
 pre-patch {
     # use the right makefile
