libpixman-devel: update to 0.19.6
git-svn-id: https://svn.macports.org/repository/macports/trunk@72557 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/libpixman-devel/Portfile
+++ b/dports/graphics/libpixman-devel/Portfile
@@ -7,7 +7,7 @@ PortGroup               muniversal 1.0
 name                    libpixman-devel
 conflicts               libpixman
 set my_name             pixman
-version                 0.19.4
+version                 0.19.6
 categories              graphics
 platforms               darwin
 maintainers             ryandesign
@@ -25,9 +25,8 @@ long_description        libpixman is a generic library for manipulating pixel \
                         regions. A PixRegion is a set of Y-X banded rectangles \
                         that cover the desired region.
 
-checksums               md5     dfbfbd46221246edd3be702ea65084aa \
-                        sha1    11418e935c373340850c5467275feb40eba83e38 \
-                        rmd160  bb7d5e951b850785a4830781ac214f5a3cc8f722
+checksums               sha1    dad3549eb2d4e92a510b8c43f6b8d75d9e946a5a \
+                        rmd160  c4cd54ceeacc02f6fffcc604cac9663547c2b0f0
 
 patchfiles              patch-test-utils.c.diff
 
