devel/ppl; cannot build universal variant; closes #26865
git-svn-id: https://svn.macports.org/repository/macports/trunk@72559 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/ppl/Portfile
+++ b/dports/devel/ppl/Portfile
@@ -41,6 +41,8 @@ depends_lib       port:gmp port:glpk
 
 license           GPLv3
 
+universal_variant   no
+
 patchfiles        configure.patch
 
 test.run          yes
