gimp-app: use a versioned dist_subdir to protect against stealth upgrades of unversioned dist files, increment revision to ensure everyone has the same (current) version from master_sites. See #26747.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72561 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/gimp-app/Portfile
+++ b/dports/aqua/gimp-app/Portfile
@@ -6,7 +6,7 @@ PortGroup  xcode 1.0
 
 name            gimp-app
 version         2.6.0
-revision        1
+revision        2
 maintainers     nomaintainer
 description     Gimp.app application bundle
 long_description ${description}
@@ -17,10 +17,15 @@ homepage        http://gimp-app.sourceforge.net/
 depends_run     path:bin/gimp:gimp2
 
 master_sites    sourceforge
+
 distfiles       ScriptExec.tar.gz \
                 gimp.app.skel.tar.gz
+
 checksums       ScriptExec.tar.gz md5 fc444a1e18cf2664f29af6ca6ca335ef \
                 gimp.app.skel.tar.gz md5 66ad4912a3c71056c479c8eeef11fd43
+
+dist_subdir     ${name}/${version}_${revision}
+
 worksrcdir      ScriptExec
 
 patchfiles      patch-main.c.diff
