devel/boost; add no_static and no_single variants to reduce build time for power users; closes #26466
git-svn-id: https://svn.macports.org/repository/macports/trunk@72562 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/boost/Portfile
+++ b/dports/devel/boost/Portfile
@@ -159,6 +159,15 @@ variant icu description {Enable Unicode support in Boost.Regex through ICU} {
     build.args-append   -sICU_PATH=${prefix}
 }
 
+variant no_static description {Disable building static libraries} {
+    build.args-append   link=shared
+}
+
+variant no_single description {Disable building single threaading libraries} {
+    build.args-delete   threading=single,multi
+    build.args-append   threading=multi
+}
+
 variant openmpi description {Build Boost.MPI} conflicts debug {
     # Cannot build debug variants with openmpi and python variants as per the following:
     # <http://trac.macports.org/ticket/23667> and <https://svn.boost.org/trac/boost/ticket/4461>
