boost: fix typo in variant description
git-svn-id: https://svn.macports.org/repository/macports/trunk@72563 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/boost/Portfile
+++ b/dports/devel/boost/Portfile
@@ -163,7 +163,7 @@ variant no_static description {Disable building static libraries} {
     build.args-append   link=shared
 }
 
-variant no_single description {Disable building single threaading libraries} {
+variant no_single description {Disable building single-threaded libraries} {
     build.args-delete   threading=single,multi
     build.args-append   threading=multi
 }
