devel/orc disabled universal variant to close ticket #26881
git-svn-id: https://svn.macports.org/repository/macports/trunk@72564 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/orc/Portfile
+++ b/dports/devel/orc/Portfile
@@ -21,6 +21,8 @@ patchfiles          patch_configure.diff \
                     patch_orc-test_orcarray.c.diff \
                     patch_config.h.in.diff
 
+universal_variant   no
+
 livecheck.type      regex
 livecheck.url       ${master_sites}
 livecheck.regex     "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
