schroedinger: add comment.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72565 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/schroedinger/Portfile
+++ b/dports/multimedia/schroedinger/Portfile
@@ -19,6 +19,10 @@ long_description \
     The Schroedinger software is available under any of the GPLv2, MIT or \
     MPL licences. Libraries may also be used under LGPL.
 
+#
+# port orc is not universal
+#
+
 universal_variant  no
 
 checksums       md5     9de088ccc314bb9e766cb3aa6510a0ef \
