--- a/dports/x11/xorg-libice/Portfile
+++ b/dports/x11/xorg-libice/Portfile
@@ -3,7 +3,7 @@
 PortSystem        1.0
 
 name              xorg-libice
-version           1.0.6
+version           1.0.7
 categories        x11 devel
 maintainers       jeremyhu
 platforms         darwin macosx
@@ -17,23 +17,50 @@ distname          libICE-${version}
 use_bzip2         yes
 use_parallel_build      yes
 
-checksums           md5     2d39bc924af24325dae589e9a849180c \
-                    sha1    ac1f702ea580bd496610266b13434858b62df9e1 \
-                    rmd160  6b9e6e649ac227210f3e3afdfa8376d659750321
+checksums           md5     bb72a732b15e9dc25c3036559387eed5 \
+                    sha1    c7d0f4c5b0e999385445b8be1bc89aec4e5de71d \
+                    rmd160  c7de88091897017869eb5859bae4fabcdef1b2a1
 
 depends_build     port:pkgconfig \
-                  port:xorg-util-macros \
                   port:xorg-xtrans
 
 depends_lib       port:xorg-xproto
 
+configure.args \
+	--without-xmlto \
+	--without-fop \
+	--disable-docs \
+	--disable-specs
+
 build.args V=1
 
-patchfiles correct_includes.patch
-patch.pre_args -p1
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:fop \
+		port:xmlto
 
-use_autoreconf yes
-autoreconf.args -fvi
+	depends_skip_archcheck-append \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-xmlto \
+		--without-fop \
+		--disable-docs \
+		--disable-specs
+
+	configure.args-append \
+		--with-xmlto \
+		--with-fop \
+		--enable-docs \
+		--enable-specs
+
+	configure.env-append \
+		XMLTO="${prefix}/bin/xmlto" \
+		FOP="${prefix}/bin/fop"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
