chef: switch to working master_sites (#26923), use configure.cc, simplify destroot
git-svn-id: https://svn.macports.org/repository/macports/trunk@72569 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/chef/Portfile
+++ b/dports/textproc/chef/Portfile
@@ -9,13 +9,12 @@ maintainers	nomaintainer
 description	trunsletes inpoot text intu sveedeesh
 long_description	${description}
 
-master_sites	ftp://tbrowne.best.vwh.net/swedish_chef/
+master_sites	freebsd
 distname	bork
 extract.suffix	.tar.Z
 
 checksums	md5 5194b5a69436b0f90137f957d19d684d
 
 use_configure	no
-build		{ system "cd $worksrcpath && lex chef.x && cc lex.yy.c -ll -o chef" }
-destroot	{ file mkdir ${destroot}${prefix}/bin
-                  system "cd $worksrcpath && install chef ${destroot}${prefix}/bin" }
+build		{ system "cd $worksrcpath && lex chef.x && ${configure.cc} lex.yy.c -ll -o chef" }
+destroot	{ xinstall ${worksrcpath}/chef ${destroot}${prefix}/bin }
