Changes to use qt4 portgroup. Adding myself as joint openmaintainer of py26 and py27 versions.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72572 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py-pyqt4/Portfile
+++ b/dports/python/py-pyqt4/Portfile
@@ -2,9 +2,11 @@
 # $Id$
 
 PortSystem	1.0
+PortGroup   qt4 1.0
 
 name		py-pyqt4
 version		4.7.7
+revision    1
 platforms	macosx
 categories	python devel
 maintainers	gmail.com:tim.stoop
@@ -23,14 +25,12 @@ checksums           md5     18213126857b7c6e6da6f7a1720d4870 \
                     sha1    e07f851b54fa5cf6ec3e146f07b1c234c5069ca3 \
                     rmd160  fe1a01ce93a012224a4c590b56dc3bfa8fcdbe74
 
-depends_lib	port:py-sip port:qt4-mac
+depends_lib-append port:py-sip
 
 #patchfiles	patch-configure.py
 
-set qt_dir	${prefix}/libexec/qt4-mac
-
 pre-configure {
-	file copy -force ${qt_dir}/mkspecs/macx-g++/qmake.conf \
+	file copy -force ${qt_mkspecs_dir}/macx-g++/qmake.conf \
 		${worksrcpath}/qmake.conf
 
 	reinplace "s|-bundle|-bundle -flat_namespace -undefined suppress|" \
@@ -38,7 +38,7 @@ pre-configure {
 }
 
 configure.cmd	"${prefix}/bin/python2.4 configure.py \
-		-g -q ${qt_dir}/bin/qmake \
+		-g -q ${qt_qmake_cmd} \
 		--confirm-license"
 configure.pre_args
 configure.post_args	LFLAGS="-F${prefix}/Library/Frameworks -L${prefix}/lib"
