--- a/dports/python/py27-pyqt4/Portfile
+++ b/dports/python/py27-pyqt4/Portfile
@@ -2,12 +2,14 @@
 # $Id$
 
 PortSystem	1.0
+PortGroup   qt4 1.0
 
 name		py27-pyqt4
 version		4.7.7
+revision    1
 categories	python devel
 platforms	macosx
-maintainers     nomaintainer
+maintainers     michaelld openmaintainer
 description	PyQt4 is a set of Python bindings for the Qt4 toolkit
 long_description \
 		PyQt4 is a set of Python bindings for the Qt4 toolkit. The \
@@ -24,10 +26,9 @@ checksums           md5     18213126857b7c6e6da6f7a1720d4870 \
                     sha1    e07f851b54fa5cf6ec3e146f07b1c234c5069ca3 \
                     rmd160  fe1a01ce93a012224a4c590b56dc3bfa8fcdbe74
 
-depends_lib	port:py27-sip port:qt4-mac
+depends_lib-append port:py27-sip
 
 set pyversion 2.7
-set qt_dir	${prefix}/libexec/qt4-mac
 
 # The patch file alters configure.py so that the qtdesigner plugin can link.
 # - it ensures that both LFLAGS are included and that the relevant version framework is linked
@@ -37,7 +38,7 @@ post-patch {
 }
 
 pre-configure {
-	file copy -force ${qt_dir}/mkspecs/macx-g++/qmake.conf \
+	file copy -force ${qt_mkspecs_dir}/macx-g++/qmake.conf \
 		${worksrcpath}/qmake.conf
 
 	reinplace "s|-bundle|-bundle -flat_namespace -undefined suppress|" \
@@ -45,7 +46,7 @@ pre-configure {
 }
 
 configure.cmd	"${prefix}/bin/python2.7 configure.py \
-		-q ${qt_dir}/bin/qmake \
+		-q ${qt_qmake_cmd} \
 		--confirm-license"
 configure.pre_args
 configure.post_args	LFLAGS="-F${frameworks_dir} -L${prefix}/lib"
@@ -76,7 +77,7 @@ post-configure {
 		
 		# Cures an isolated case
 		system "cd ${worksrcpath}/designer && \
-			${qt_dir}/bin/qmake -spec ${qt_dir}/mkspecs/macx-g++ -macx \
+			${qt_qmake_cmd} -spec ${qt_mkspecs_dir}/macx-g++ -macx \
 				-o Makefile python.pro"
 		}
 	}
