Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72573 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-spyder/Portfile
+++ b/dports/python/py26-spyder/Portfile
@@ -2,9 +2,11 @@
 
 PortSystem          1.0
 PortGroup           python26 1.0
+PortGroup           qt4 1.0
 
 name                py26-spyder
 version             1.1.6
+revision            1
 categories          python devel
 platforms           darwin
 maintainers         jameskyle openmaintainer
@@ -30,10 +32,6 @@ depends_lib-append  port:py26-pyqt4 \
 checksums           md5     9d82fc1944d9d0c84351b0faa1f65b49 \
                     sha1    51a8c608b4e32921ef7096237c46f8c66da4a196 \
                     rmd160  24d4e57a1349f12565db14a1f79fa6cfdd110221
-
-set qt_dir          ${prefix}/libexec/qt4-mac
-
-configure.env       QTDIR=${qt_dir}
 
 post-destroot {
   ln -s ${python.prefix}/bin/spyder ${destroot}${prefix}/bin/
