--- a/dports/python/py26-qscintilla/Portfile
+++ b/dports/python/py26-qscintilla/Portfile
@@ -1,6 +1,7 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
 #
 # PortGroup           python26 1.0
 #
@@ -13,6 +14,7 @@ PortSystem          1.0
 
 name                py26-qscintilla
 version             2.4.5
+revision            1
 categories          python devel
 maintainers         adfernandes openmaintainer
 description         Python bindings for QScintilla
@@ -41,17 +43,12 @@ depends_lib         port:qscintilla port:python26 port:py26-pyqt4
 
 universal_variant   no
 
-set qt_dir          ${prefix}/libexec/qt4-mac
-
-configure.env       QTDIR=${qt_dir}
 configure.dir       ${worksrcpath}/Python
 configure.cmd       "${prefix}/bin/python2.6 configure.py; echo"
 
-build.env           QTDIR=${qt_dir}
 build.dir           ${worksrcpath}/Python
 build.cmd           ${build.cmd}
 
-destroot.env        QTDIR=${qt_dir} DESTDIR=${destroot}
 destroot.dir        ${worksrcpath}/Python
 destroot.cmd        ${build.cmd} install
 
