Changes to use qt4 portgroup. Redo gnupg options as variants.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72575 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qca-cyrus-sasl/Portfile
+++ b/dports/devel/qca-cyrus-sasl/Portfile
@@ -2,10 +2,11 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
 
 name                qca-cyrus-sasl
 version             2.0.0-beta3
-revision            1
+revision            2
 categories          devel crypto security
 maintainers         michaelld openmaintainer
 description         Qt Cryptographic Architecture - cyrus-sasl plugin
@@ -34,15 +35,11 @@ depends_lib         port:qca \
 # forcing patching of multiple files.
 patchfiles          patch-configure.diff
 
-set qt_dir          ${prefix}/libexec/qt4-mac
-
 # qca-gnupg does not use --prefix
 configure.pre_args
 configure.args       --verbose             \
                      --qtdir=${qt_dir}     \
                      --with-sasl-inc=${prefix}/include
-
-destroot.destdir     INSTALL_ROOT="${destroot}"
 
 post-destroot {
     # fix library path of installed library/ies
