--- a/dports/devel/qca-gnupg/Portfile
+++ b/dports/devel/qca-gnupg/Portfile
@@ -2,8 +2,11 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
+
 name                qca-gnupg
 version             2.0.0-beta3
+revision            1
 categories          devel crypto security
 maintainers         michaelld openmaintainer
 description         Qt Cryptographic Architecture - gnupg plugin
@@ -24,22 +27,17 @@ checksums           md5 9b4d020efd835a52d98b2ced9ae79c4b \
                     sha1 77e3874b9ed427e281b23b9bf41ecc95e74f7053 \
                     rmd160 2531d81179e0b78cc3689c7891b4c6c60d56a422
 
-depends_lib         port:qca
-depends_run         port:gnupg
+depends_lib-append  port:qca
 
 # The patch to "configure" uses QCA's 'crypto.prf' file to correctly
 # include its libraries (no matter how QCA is installed), instead of
 # forcing patching of multiple files.
 patchfiles          patch-configure.diff
 
-set qt_dir         ${prefix}/libexec/qt4-mac
-
 # qca-gnupg does not use --prefix
 configure.pre_args
 configure.args       --verbose             \
                      --qtdir=${qt_dir}
-
-destroot.destdir    INSTALL_ROOT="${destroot}"
 
 post-destroot {
     # fix library path of installed library/ies
@@ -60,7 +58,24 @@ variant universal {
     configure.universal_args-append --universal
 }
 
+variant gnupg1 description {GnuPG version 1 runtime use} {
+	depends_run-append port:gnupg
+}
+
 variant gnupg2 description {GnuPG version 2 runtime use} {
-	depends_run-delete port:gnupg
 	depends_run-append port:gnupg2
+}
+
+# check for setting the default variant
+if {![variant_isset gnupg1] &&
+    ![variant_isset gnupg2]} {
+    default_variants +gnupg2
+}
+
+# make sure -gnupg2 isn't set alone
+if {![variant_isset gnupg1] &&
+    ![variant_isset gnupg2]} {
+    return -code error \
+"\n\nThe variant -gnupg2 will not work alone.
+Please select one of +gnupg1 or +gnupg2 as a variant.\n"
 }
