--- a/dports/devel/qca-ossl/Portfile
+++ b/dports/devel/qca-ossl/Portfile
@@ -2,9 +2,11 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
+
 name                qca-ossl
 version             2.0.0-beta3
-revision            2
+revision            3
 categories          devel crypto security
 maintainers         michaelld openmaintainer
 description         Qt Cryptographic Architecture - openssl plugin
@@ -25,8 +27,7 @@ checksums           md5 bdc62c01321385c7da8d27b3902910ce \
                     sha1 dd925e8732ff76f24f9f90f4094abaf2f0ac27bf \
                     rmd160 c979c3c3427eb45e8866e28746f83966e8bcf3c2
 
-depends_build       port:pkgconfig
-depends_lib         port:qca \
+depends_lib-append  port:qca \
                     port:openssl
 
 # Without the patch to "qca-ossl.cpp", if MD2 isn't part of OpenSSL
@@ -39,14 +40,10 @@ depends_lib         port:qca \
 patchfiles          patch-qca-ossl.cpp.diff \
                     patch-configure.diff
 
-set qt_dir         ${prefix}/libexec/qt4-mac
-
 # qca-ossl does not use --prefix
 configure.pre_args
 configure.args       --verbose             \
                      --qtdir=${qt_dir}
-
-destroot.destdir    INSTALL_ROOT="${destroot}"
 
 post-destroot {
     # fix library path of installed library/ies
