--- a/dports/devel/qca/Portfile
+++ b/dports/devel/qca/Portfile
@@ -2,9 +2,11 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
+
 name                qca
 version             2.0.2
-revision            5
+revision            6
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          devel crypto security
 maintainers         michaelld openmaintainer
@@ -25,9 +27,6 @@ checksums            md5     27ebdfbd9869d90dae078a6decd029f4 \
                      sha1    5a414c3296cd37d1ec34182be0d089c5073f55a8 \
                      rmd160  18b0f497709f9700227644977946735d2ec3c623
 
-depends_build        port:pkgconfig
-depends_lib          port:qt4-mac
-
 # (1) correct pkgconfig file for framework install, if selected.
 # (2) allow for 'debug' and 'framework' options at the same time.
 #     This change is needed to allow for +debug [+framework] --
@@ -36,52 +35,32 @@ depends_lib          port:qt4-mac
 #     variant is requested.
 patchfiles           patch-configure.diff
 
-set qt_dir           ${prefix}/libexec/qt4-mac
-set qca_dir          ${prefix}/libexec/qt4-mac
+# set QCA to install into the QT4 directory
+configure.pre_args   --prefix=${qt_dir}
 
-# set QT4 plugins to install into the QT4 directory
-configure.pre_args   --prefix=${qca_dir}
-
-# defaults: release only, framework, specific build_arch.
-# use variants to change these
+# defaults: release only, no-framework, specific build_arch.
+# use variants to change everything except framework
 configure.args        --verbose         \
                       --qtdir=${qt_dir} \
                       --release         \
-                      --framework
-
-destroot.destdir      INSTALL_ROOT="${destroot}"
+                      --no-framework
 
 post-destroot {
     # alias to destroot QCA top-level directory
-    set destroot_qca ${destroot}${qca_dir}
-
-    # tweak header install for framework only
-    if {![variant_isset no_framework]} {
-        # when installed as a framework, link headers from
-        # the framework into ${destroot_qca}/include
-        xinstall -d 755 ${destroot_qca}/include
-        ln -s ${qca_dir}/lib/qca.framework/Headers \
-            ${destroot_qca}/include/QtCrypto
-    }
+    set destroot_qt ${destroot}${qt_dir}
 
     # install docs
-    xinstall -d 755 ${destroot_qca}/share/doc/${name}
+    xinstall -d 755 ${destroot_qt}/share/doc/${name}
     xinstall -m 644 -W ${worksrcpath} COPYING README TODO \
-        ${destroot_qca}/share/doc/${name}
+        ${destroot_qt}/share/doc/${name}
 
     # install cmake file (taken from port 'kdelibs4'). To use this
     # file, include '-DCMAKE_MODULE_PATH=...' in configure.args during
     # the initial 'configure' stage (which uses CMake), to the full
     # path of where the CMake files are installed.
-    xinstall -d 755 ${destroot_qca}/share/cmake/modules
+    xinstall -d 755 ${destroot}${qt_cmake_module_dir}
     xinstall -m 644 -W ${filespath} FindQCA2.cmake \
-        ${destroot_qca}/share/cmake/modules
-}
-
-variant no_framework description \
-{Build as a library, not framework} {
-    configure.args-delete --framework
-    configure.args-append --no-framework
+        ${destroot}${qt_cmake_module_dir}
 }
 
 variant debug description \
@@ -93,9 +72,9 @@ variant debug description \
 variant examples description \
 {Include examples in install} {
     post-destroot {
-        xinstall -d 755 ${destroot}${qca_dir}/share/examples/${name}
+        xinstall -d 755 ${destroot}${qt_dir}/share/examples/${name}
         eval file copy [glob ${worksrcpath}/examples/*] \
-            ${destroot}${qca_dir}/share/examples/${name}
+            ${destroot}${qt_dir}/share/examples/${name}
     }
 }
 
