Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72576 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qscintilla/Portfile
+++ b/dports/devel/qscintilla/Portfile
@@ -2,9 +2,11 @@
 # $Id$
 
 PortSystem 1.0
+PortGroup           qt4 1.0
 
 name                qscintilla
 version             2.4.5
+revision            1
 categories          devel
 maintainers         adfernandes openmaintainer
 description         QScintilla is a port to Qt of Neil Hodgson's Scintilla C++ editor control.
@@ -37,21 +39,15 @@ checksums           md5     8063f8f933513959432c27c5ffecf56b \
                     sha1    2401c2214ba0377ad61855c0fac6f6c7c95801d6 \
                     rmd160  d96cf05c879f314ee828ec6a1609bd1864692bd6
 
-depends_lib         port:qt4-mac
-
 universal_variant   no
 
-set qt_dir          ${prefix}/libexec/qt4-mac
-
-configure.env       QTDIR=${qt_dir}
-configure.cmd       "cd ${worksrcpath}/Qt4; ${qt_dir}/bin/qmake qscintilla.pro; \
-                     cd ${worksrcpath}/designer-Qt4; ${qt_dir}/bin/qmake designer.pro; \
+configure.cmd       "cd ${worksrcpath}/Qt4; ${qt_qmake_cmd} qscintilla.pro; \
+                     cd ${worksrcpath}/designer-Qt4; ${qt_qmake_cmd} designer.pro; \
                      echo"
 
-build.env           QTDIR=${qt_dir} CPLUS_INCLUDE_PATH=${worksrcpath}/Qt4 LIBRARY_PATH=${worksrcpath}/Qt4
+build.env-append    CPLUS_INCLUDE_PATH=${worksrcpath}/Qt4 LIBRARY_PATH=${worksrcpath}/Qt4
 build.cmd           "cd ${worksrcpath}/Qt4; make; cd ${worksrcpath}/designer-Qt4; make; echo"
 
-destroot.env        QTDIR=${qt_dir} INSTALL_ROOT=${destroot}
 destroot.cmd        "cd ${worksrcpath}/Qt4; make install; cd ${worksrcpath}/designer-Qt4; make install; echo"
 
 post-build {
