--- a/dports/devel/eric4/Portfile
+++ b/dports/devel/eric4/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            eric4
 version         4.4.8
+revision        1
 categories      devel
 platforms       darwin
 maintainers     adfernandes openmaintainer
@@ -25,7 +26,7 @@ checksums           md5     8cf8d2811e5635eaf9520d92be4806cb \
                     sha1    d3f1116361d32ec59f60e5994b348543a2986432 \
                     rmd160  48f3529338e892a5dd416bc016d309a5beb7931f
 
-depends_lib     port:python26 port:qt4-mac port:py26-pyqt4 port:py26-qscintilla \
+depends_lib     port:python26 port:py26-pyqt4 port:py26-qscintilla \
                 port:py26-svn port:py26-rope port:py26-lint port:py26-cx_Freeze port:py26-enchant
 
 use_configure   no
