--- a/dports/devel/cmake/Portfile
+++ b/dports/devel/cmake/Portfile
@@ -6,7 +6,7 @@ PortGroup	muniversal 1.0
 
 name		cmake
 version		2.8.2
-revision	2
+revision	3
 set branch	[join [lrange [split ${version} .] 0 1] .]
 categories	devel
 maintainers	css
@@ -24,9 +24,9 @@ checksums       md5     8c967d5264657a798f22ee23976ff0d9 \
                 sha1    272003c2fe392b211ce3b5f895ad84da2ca603cf \
                 rmd160  079b7c8cb385c59b3713a3611d7a9482f7855fe5
 
-depends_lib     port:libidn port:openssl
+depends_lib-append port:libidn port:openssl
 
-configure.env   CMAKE_PREFIX_PATH=${prefix} \
+configure.env-append CMAKE_PREFIX_PATH=${prefix} \
 				CMAKE_INCLUDE_PATH=${prefix}/include/ncurses \
 				CMAKE_LIBRARY_PATH=${prefix}/lib
 
@@ -66,9 +66,9 @@ post-destroot {
 }
 
 variant gui description {Qt4 based cmake-gui} {
-	depends_lib-append port:qt4-mac
+    PortGroup qt4 1.0
 	patchfiles-append patch-CMakeLists.txt.diff
-	configure.args-append --qt-gui --qt-qmake=${prefix}/libexec/qt4-mac/bin/qmake
+	configure.args-append --qt-gui --qt-qmake=${qt_qmake_cmd}
 }
 
 livecheck.type  regex
