Changes to use qt4 portgroup. Fix debug variant for new qt4 behavior.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72580 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qgit/Portfile
+++ b/dports/devel/qgit/Portfile
@@ -1,13 +1,14 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
 
 name                qgit
 version             2.2
-revision            2
+revision            3
 categories          devel
 maintainers         free.fr:ocroquette
-description         A graphical interface to git repositories
+description         A QT graphical interface to git repositories
 long_description    A QT graphical interface to git repositories
 
 homepage            http://sourceforge.net/projects/qgit/
@@ -20,24 +21,37 @@ worksrcdir          qgit
 master_sites        sourceforge
 checksums           md5 f863efa000aa1549f803c6ad743decd6
 
-depends_lib         port:qt4-mac port:git-core
+depends_lib-append  port:git-core
 
 patchfiles          patch_src_namespace_def.cpp.diff  patch_src_qgit.cpp.diff
 
-configure {
-    # ui_msg ${worksrcpath}
-    system "cd ${worksrcpath} && ${prefix}/libexec/qt4-mac/bin/qmake"
+variant debug description "Build as both release and debug" {}
+
+post-patch {
+    # when not doing debug ...
+    if {![variant_isset debug]} {
+        # ... build just the release version
+        reinplace "s@debug_and_release@release@" ${worksrcpath}/qgit.pro
+        reinplace "s@debug_and_release@release@" ${worksrcpath}/src/src.pro
+    }
+    # nothing to do if +debug is specified; this is the default.
 }
+
+configure.cmd       ${qt_qmake_cmd}
+configure.pre_args   
+configure.args       
+configure.post_args
 
 destroot {
     # Install to the application directory
-    xinstall -m 755 -d ${destroot}/Applications/MacPorts
+    xinstall -m 755 -d ${destroot}${applications_dir}
+    file delete -force ${destroot}${applications_dir}/qgit.app
     file copy ${worksrcpath}/bin/qgit.app \
-              ${destroot}/Applications/MacPorts
+        ${destroot}${applications_dir}
 
-    # Also copy to /bin for easier access from the command line
+    # Also link to ${prefix}/bin for easier access from the command line
     # Especially useful since qgit is supposed to be started from
     # the GIT repository location.
-    xinstall ${worksrcpath}/bin/qgit.app/Contents/MacOS/qgit ${destroot}${prefix}/bin
+    system "ln -s ${applications_dir}/qgit.app/Contents/MacOS/qgit \
+        ${destroot}${prefix}/bin"
 }
-
