--- a/dports/devel/qt4-creator-mac/Portfile
+++ b/dports/devel/qt4-creator-mac/Portfile
@@ -2,8 +2,10 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
+
 name                qt4-creator-mac
-version             1.3.1
+version             2.0.1
 categories          devel aqua
 platforms           darwin
 maintainers         mcalhoun openmaintainer
@@ -13,17 +15,16 @@ long_description    Qt Creator is a cross-platform integrated development enviro
 homepage            http://qt.nokia.com/products/developer-tools
 distname            qt-creator-${version}-src
 master_sites        http://get.qt.nokia.com/qtcreator/
-depends_lib         port:qt4-mac
 
 use_zip yes
 
-checksums           md5     b4c66810c591f62aa26739f997ffe88b \
-                    sha1    a4a72771f72a04f1aaa6d8e10569c70425002eeb \
-                    rmd160  28ce9fa2bf758cb87b6b753bb439ad16e8b4d542
+checksums           md5     7b670968ec80d2d413ff22605a31a77d \
+                    sha1    367b5f148f46a31ab25342917f44992ee57a1558 \
+                    rmd160  ac0f61a82d49fb5768331f548cdad44b48c4ca14
 
-configure.cmd        ${prefix}/libexec/qt4-mac/bin/qmake
-configure.pre_args   
-configure.args       
+configure.cmd       ${qt_qmake_cmd}
+configure.pre_args
+configure.args
 configure.post_args
 configure.universal_args
 
@@ -38,5 +39,5 @@ variant universal {
 livecheck.type      regex
 livecheck.url       http://get.qt.nokia.com/qtcreator/
 # Qt Creator 2.0.* requires Qt 4.7
-#livecheck.regex     "qt-creator-(\[0-9.-\]+)-src.zip"
-livecheck.regex     "qt-creator-(1.\[0-9.-\]+)-src.zip"
+livecheck.regex     "qt-creator-(2.\[0-9.-\]+)-src.zip"
+#livecheck.regex     "qt-creator-(1.\[0-9.-\]+)-src.zip"
