--- a/dports/devel/qbzr/Portfile
+++ b/dports/devel/qbzr/Portfile
@@ -5,6 +5,7 @@ PortGroup     python26 1.0
 
 name          qbzr
 version       0.19.1
+revision      1
 set branch    [join [lrange [split ${version} .] 0 1] .]
 categories    devel python
 platforms     darwin
