Changes to use kde 1.1 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72583 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/automoc/Portfile
+++ b/dports/devel/automoc/Portfile
@@ -1,11 +1,15 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4   1.0
+# use KDE4 portgroup, except for depends_build on this port
+# See dports/_resources/port1.0/group/kde4-1.1.tcl for more info.
+PortGroup           kde4   1.1
+depends_build-delete port:automoc
 
 name                automoc
 version             0.9.88
-revision            1
+revision            2
 categories          devel kde kde4
 maintainers         nomaintainer
 description         A tool which automatically creates .moc files and compiles them in.
@@ -18,12 +22,6 @@ distname            ${name}4-${version}
 checksums           md5     91bf517cb940109180ecd07bc90c69ec \
                     sha1    d864c3dda99d8b5f625b9267acfa1d88ff617e3a \
                     rmd160  8545f159092c9237f8c0f0f14b0dca9bfeac5c19
-
-# depends_build, not depends_build-append should be used here. 
-# See dports/_resources/port1.0/group/kde4-1.0.tcl for reason.
-depends_build       port:cmake
-
-configure.args-append   ../${distname}
 
 livecheck.type		regex
 livecheck.url		http://ftp.gtlib.cc.gatech.edu/pub/kde/stable/${name}4/
