--- a/dports/devel/grantlee/Portfile
+++ b/dports/devel/grantlee/Portfile
@@ -2,10 +2,11 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           cmake 1.0
+PortGroup           kde4 1.1
 
 name                grantlee
 version             0.1.6
+revision            1
 categories          devel kde kde4
 maintainers         nomaintainer
 description         string template engine based on the Django template system
@@ -17,7 +18,3 @@ master_sites        http://downloads.grantlee.org/
 
 checksums           sha1    a3df9267b3bf55d98e19e30279e751084dc4bbcd \
                     rmd160  47d486efaf73910c83718d5c2d70daa3b35ecc75
- 
-depends_lib-append  port:qt4-mac
-
-configure.args-append   ../${distname}
