Changes to use kde 1.1 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72585 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/soprano/Portfile
+++ b/dports/devel/soprano/Portfile
@@ -2,10 +2,11 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4    1.0
+PortGroup           kde4    1.1
 
 name                soprano
 version             2.5.2
+revision            1
 categories          devel
 maintainers         nomaintainer
 description         The Qt-based RDF framework.
@@ -23,9 +24,8 @@ depends_lib-append  port:clucene \
                     port:redland \
                     port:libiodbc
 
-depends_run-append port:virtuoso
+depends_run-append  port:virtuoso
 
-configure.args-append      ../${distname}
 livecheck.type      regex
 livecheck.url		${homepage}
 livecheck.regex     {Soprano (\d+(?:\.\d+)*\.(?:\d|[0-5]\d)) released}
