Changes to use kde 1.1 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72586 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/akonadi/Portfile
+++ b/dports/devel/akonadi/Portfile
@@ -2,10 +2,11 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4    1.0
+PortGroup           kde4    1.1
 
 name                akonadi
 version             1.4.0
+revision            1
 categories          devel kde kde4
 maintainers         nomaintainer
 description         A personal information management storage service.
@@ -20,20 +21,17 @@ checksums           md5     ed19efb982f7debd7e109cf1397d0588 \
                     sha1    a83943aa46537fee4e07953fedf29f5c13487937 \
                     rmd160  a69885807127684aa40e6203bd76cc09275dc427
 
-depends_build-append port:qt4-mac
 depends_lib-append  port:soprano \
 					port:boost \
                     port:shared-mime-info
 depends_run-append  path:bin/mysql5:mysql5-server
 
-patch.dir           ${workpath}/${distname}
 patchfiles          patch-akonadi-prefix.h.cmake.diff
 post-patch {
     reinplace s|@@APPS@@|${applications_dir}| ${workpath}/${distname}/akonadi-prefix.h.cmake
 }
 
-configure.args-append   -DMYSQLD_EXECUTABLE="${prefix}/libexec/mysqld" \
-                        ../${distname}
+configure.args-append   -DMYSQLD_EXECUTABLE="${prefix}/libexec/mysqld"
 
 post-configure {
     # Avoid interference by cdparanoia's ${prefix}/include/utils.h
