Changes to use kde 1.1 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72587 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qtscriptgenerator/Portfile
+++ b/dports/devel/qtscriptgenerator/Portfile
@@ -1,10 +1,11 @@
-# $Id:$
+# $Id$
 
 PortSystem          1.0
+PortGroup           kde4 1.1
 
 name                qtscriptgenerator
 version             0.1.0
-revision            1
+revision            2
 categories          devel kde4
 maintainers         nomaintainer
 description         QtScript bindings generator.
@@ -19,23 +20,19 @@ checksums           md5     ca4046ad4bda36cd4e21649d4b98886d \
                     sha1    eeae733106369e289f257b754822bc372fd6ba75 \
                     rmd160  a02ce6fea2fbc3d3a6ae9e51c6b563ef4bcd51f3 
 
-depends_lib         port:qt4-mac
-
-set qtdir           ${prefix}/libexec/qt4-mac
-
 use_configure   no
 
 build {
     foreach dir {generator qtbindings} {
         if { ${dir}=="generator" } {
-            system "cd ${worksrcpath}/${dir} && export QTDIR=${qtdir} && PATH=${qtdir}/bin:$env(PATH) qmake && make && ${worksrcpath}/${dir}/generator"
+            system "cd ${worksrcpath}/${dir} && export QTDIR=${qt_dir} && ${qt_qmake_cmd} && make && ${worksrcpath}/${dir}/generator"
         } else {
-            system "cd ${worksrcpath}/${dir} && export QTDIR=${qtdir} && PATH=${qtdir}/bin:$env(PATH) qmake && make"
+            system "cd ${worksrcpath}/${dir} && export QTDIR=${qt_dir} && ${qt_qmake_cmd} && make"
         }
     }
 }
 
 destroot {
-    xinstall -m 0755 -d ${destroot}${qtdir}/plugins/script
-    eval xinstall -m 0644 [glob ${worksrcpath}/plugins/script/*] ${destroot}${qtdir}/plugins/script/
+    xinstall -m 0755 -d ${destroot}${qt_plugins_dir}/script
+    eval xinstall -m 0644 [glob ${worksrcpath}/${qt_plugins_dir}/script/*] ${destroot}${qt_plugins_dir}/script/
 }
