Changes to use kde 1.1 portgroup. Add in CMake module. Add in livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72588 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/phonon/Portfile
+++ b/dports/audio/phonon/Portfile
@@ -2,10 +2,14 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4    1.0
+# use KDE4 portgroup, but remove depends_lib for phonon
+# See dports/_resources/port1.0/group/kde4-1.1.tcl for more info.
+PortGroup           kde4    1.1
+depends_lib-delete  port:phonon
 
 name                phonon
 version             4.4.2
+revision            1
 categories          audio kde kde4
 maintainers         nomaintainer
 description         Cross Platform Multimedia API used by KDE4
@@ -19,5 +23,6 @@ checksums           md5 d9eab28383783261254f1cef3b92a3fa \
                     sha1 c329d924fb75a89a9de8a4d799ff4dcd7ee3302e \
                     rmd160 aa37903f166904dd09401541df8fc268a2858606
 
-configure.args-append	-DCMAKE_INSTALL_NAME_DIR=${prefix}/lib \
-                        ../${distname}
+livecheck.type		regex
+livecheck.url		http://ftp.gtlib.cc.gatech.edu/pub/kde/stable/${name}/
+livecheck.regex		"\(\\d+(?:\\.\\d+)*)\/"
