Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72589 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/hydrogen/Portfile
+++ b/dports/audio/hydrogen/Portfile
@@ -2,11 +2,12 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
 
 name                hydrogen
 epoch               1
 version             0.9.4
-revision            1
+revision            2
 categories          audio
 platforms           macosx
 maintainers         xenith.org:xenith
@@ -22,10 +23,9 @@ checksums           md5     69b0e35a5bba8151347c5e6ec9e8e4f3 \
                     sha1    e988710f82af858c0c688cb1d1e19d789fca49ef \
                     rmd160  9f1514462eaa756fe0a3e8fed3ff647a32ad033d
 
-depends_build       port:scons
+depends_build-append port:scons
 
-depends_lib         port:qt4-mac \
-                    port:flac \
+depends_lib-append  port:flac \
                     port:libsndfile \
                     port:libtar
 
@@ -55,7 +55,6 @@ build.args          DESTDIR=${destroot} \
                     oss=0 \
                     portaudio=0 \
                     portmidi=0
-build.env           QTDIR=${prefix}/libexec/qt4-mac
 
 destroot {
     set hydrogen_app ${destroot}${applications_dir}/Hydrogen.app
