Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72590 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/liblastfm/Portfile
+++ b/dports/audio/liblastfm/Portfile
@@ -2,10 +2,11 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
 
 name                liblastfm
 version             0.3.0
-revision            3
+revision            4
 categories          audio
 maintainers         nomaintainer
 description         A set of libraries allowing use of the Last.fm site services.
@@ -20,15 +21,11 @@ checksums           md5     3f73222ebc31635941832b01e7a494b6 \
                     sha1    1dabd8d67f4a36aebad29608c6f89b895472c25a \
                     rmd160  39098fe55f88c3831ab5b1380c1e978c2ef55aac
 
-depends_build       port:ruby
+depends_build-append port:ruby
 
-depends_lib         port:libsamplerate port:fftw-3-single port:qt4-mac
-
-set qtdir           ${prefix}/libexec/qt4-mac
+depends_lib-append  port:libsamplerate port:fftw-3-single
 
 universal_variant no
-
-configure.env       PATH=${qtdir}/bin:$env(PATH)
 
 configure.pre_args  --prefix ${prefix}
 configure.args      --release
@@ -49,8 +46,6 @@ post-configure {
 }
 
 use_parallel_build  no
-
-build.env           PATH=${qtdir}/bin:$env(PATH)
 
 # fix build failure on Snow Leopard
 patchfiles          patch-src-core-misc-cpp.patch
