Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72592 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/cutecom-qt4-mac/Portfile
+++ b/dports/comms/cutecom-qt4-mac/Portfile
@@ -1,10 +1,11 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
 
 name                cutecom-qt4-mac
 version             0.20.0
-revision            1
+revision            2
 categories          comms
 maintainers         jwbacon@tds.net
 distname            cutecom-${version}
@@ -18,8 +19,7 @@ master_sites        http://cutecom.sourceforge.net/
 homepage            http://cutecom.sourceforge.net
 
 platforms           darwin
-depends_build       port:cmake
-depends_lib         port:qt4-mac
+depends_build-append port:cmake
 
 patchfiles          patch-qcppdialogimpl.cpp \
 		    patch-qcppdialogimpl.h \
@@ -29,11 +29,8 @@ checksums           md5     a42394c3a29a2dc30edab721469f5eee \
                     sha1    36d430ab25e7f53128c27f39f67a0fe9a2dd18af \
                     rmd160  e8e3caf133ac19b320f66a898069f4c0698ad0a0
 
-build.env   QTDIR=${prefix}/libexec/qt4-mac
-configure.env	QTDIR=${prefix}/libexec/qt4-mac
-
 configure {
-	system "cd ${worksrcpath} && cmake -DQT_QMAKE_EXECUTABLE=${prefix}/libexec/qt4-mac/bin/qmake ."
+	system "cd ${worksrcpath} && cmake ${qt_cmake_defines} ."
 }
 
 destroot    {
