--- a/dports/lang/qore-qt4-module/Portfile
+++ b/dports/lang/qore-qt4-module/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 # We are not using cmake portgroup because of linking errors
 # in the smokegen target/module (internal only, it's not installed at all)
 #PortGroup           cmake 1.0
+PortGroup           qt4 1.0
 
 name                qore-qt4-module
 version             0.1.0
@@ -24,14 +25,12 @@ checksums           md5     46783f7e20ec2b5546caf2b764268090 \
 patchfiles          patch-smoke-qt-smokeconfig.xml.diff \
                     patch-smoke-qt-CMakeLists.txt.diff
 
-depends_lib         port:qore \
-                    port:qt4-mac
+depends_lib-append  port:qore
 
-depends_build       port:cmake
+depends_build-append port:cmake
 
 configure.cmd       cmake
 configure.pre_args  -DCMAKE_INSTALL_PREFIX=${prefix}
 configure.args      -DCMAKE_BUILD_TYPE=Release \
-                    -DQT_QMAKE_EXECUTABLE=${prefix}/libexec/qt4-mac/bin/qmake \
+                    ${qt_cmake_defines} \
                     .
-
