Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72594 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gis/qgis/Portfile
+++ b/dports/gis/qgis/Portfile
@@ -3,9 +3,11 @@
 
 PortSystem			1.0
 PortGroup			cmake	1.0
+PortGroup           qt4     1.0
+
 name				qgis
 version				1.4.0
-revision            2
+revision            3
 categories			gis
 maintainers			vince
 description			QGIS is a user-friendly GIS based on Qt 4
@@ -37,9 +39,9 @@ patchfiles			patch-spatialite_c.diff \
 					patch-cmake_Python_cmake.diff \
 					patch-python_configure_py_in.diff
 
-depends_build		port:cmake
+depends_build-append port:cmake
 									
-depends_lib			port:libiconv \
+depends_lib-append 	port:libiconv \
 					port:expat \
 					port:openssl \
 					port:proj \
@@ -136,7 +138,7 @@ configure.args-append		"-DPYRCC4_PROGRAM=${prefix}/bin/pyrcc4-${Pyverpath}"
 configure.args-append		\
 				"-DSIP_BINARY_PATH=${Python_FRM}/Versions/${Pyverpath}/bin/sip"
 configure.args-append		"-DSIP_INCLUDE_DIR=${Python_FRM}/Headers"
-configure.args-append		"-DQT_QMAKE_EXECUTABLE=${prefix}/libexec/qt4-mac/bin/qmake"
+configure.args-append		${qt_cmake_defines}
 configure.args-append		"-DCMAKE_BUILD_TYPE=Release"
 	
 # This is a fake but don't ask me why it is needed
