Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72595 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gis/cgal/Portfile
+++ b/dports/gis/cgal/Portfile
@@ -6,7 +6,7 @@ PortGroup               cmake 1.0
 
 name										cgal
 version									3.6.1
-revision                1
+revision                2
 license									LGPL - QPL
 categories							gis science
 maintainers							vince
@@ -38,11 +38,19 @@ depends_lib-append			port:boost \
                         port:gmp
 
 variant demos description {Create demos} {
-	depends_lib-append		port:qt4-mac \
-                        port:libQGLViewer
-	
+  PortGroup             qt4 1.0
+
+	depends_lib-append		port:libQGLViewer \
+                        port:ipe
+
 	configure.args-append	-DWITH_examples=TRUE
 	configure.args-append	-DWITH_demos=TRUE
+
+  # MacPorts installs IPE version 7; make sure to use it.
+  configure.args-append -DWITH_IPE_7=TRUE
+
+  # include Qt's CMake defines, just in case
+  configure.args-append ${qt_cmake_defines}
 
   build.target-append   examples demos
   use_parallel_build    no
