--- a/dports/gis/qlandkarte/Portfile
+++ b/dports/gis/qlandkarte/Portfile
@@ -2,11 +2,12 @@
 # $Id$
 
 PortSystem       1.0
+PortGroup        qt4 1.0
 
 name             qlandkarte
 categories       gis
 version          0.7.3
-revision         3
+revision         4
 platforms        darwin
 maintainers      nomaintainer
 
@@ -19,13 +20,12 @@ distname         QLandkarte_${version}
 
 checksums        md5 51f804235511f1c10ae8538f86743135
 
-depends_lib      port:proj \
-                 port:libusb-compat \
-                 port:qt4-mac
+depends_lib-append port:proj \
+                 port:libusb-compat
 
 configure.args   --with-extra-includes=${prefix}/include\
                  --with-extra-libs=${prefix}/lib \
-                 --with-qt-dir=${prefix}/libexec/qt4-mac
+                 --with-qt-dir=${qt_dir}
 
 post-patch {
     # fix lack of CoreFoundation after libgarmin.a
