Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72597 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/psi/Portfile
+++ b/dports/net/psi/Portfile
@@ -2,10 +2,11 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
 
 name                psi
 version             0.14
-revision            1
+revision            2
 categories          net chat
 maintainers         rowue
 description         jabber-based instant messaging client
@@ -23,11 +24,7 @@ checksums           md5     9d7dcce3bcab53b741a712199bd986be \
                     sha1    f5f8e1a427339a4e9113b5fa513b01a42ae1be4b \
                     rmd160  0c4a07726c2f9819da0f8aa8f1982e939f1fc20f
 
-depends_lib         lib:libz:zlib \
-                    port:qt4-mac
-
-
-configure.args      --qtdir=${prefix}/libexec/qt4-mac
+configure.args      --qtdir=${qt_dir}
 
 destroot {
     xinstall -m 755 -d ${destroot}${applications_dir}
