--- a/dports/net/psi-otr/Portfile
+++ b/dports/net/psi-otr/Portfile
@@ -1,12 +1,13 @@
 # $Id$
 
 PortSystem      1.0
+PortGroup       qt4 1.0
 
 name            psi-otr
 version         0.5
 categories      net chat
 maintainers     rowue
-revision        2
+revision        3
 description     otr-plugin for psi - for plugin-enabled psi
 long_description \
     Psi is a capable Jabber client aimed at experienced users.  Its design \
@@ -27,7 +28,7 @@ depends_lib     port:psi \
 
 patchfiles      patch-psi-otr.pro.diff 
 
-configure.cmd   qmake-mac
+configure.cmd   ${qt_qmake_cmd}
 configure.pre_args
 configure.post_args
 configure.args
