Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72599 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/murmur/Portfile
+++ b/dports/net/murmur/Portfile
@@ -2,10 +2,11 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
 
 name                murmur
 version             1.2.2
-revision            2
+revision            3
 categories          net audio
 license             GPL
 maintainers         snc openmaintainer
@@ -29,15 +30,14 @@ livecheck.type      regex
 livecheck.url       http://sourceforge.net/project/showfiles.php?group_id=147372&package_id=162594
 livecheck.regex     mumble-(\\d+(\\.\\d+)+).tar.gz
 
-depends_lib \
-    port:qt4-mac \
+depends_lib-append \
     port:openssl \
     port:protobuf-cpp
 
-depends_build \
+depends_build-append \
     port:boost
 
-configure.cmd       ${prefix}/libexec/qt4-mac/bin/qmake
+configure.cmd       ${qt_qmake_cmd}
 configure.pre_args  CONFIG-=app_bundle CONFIG+=\"
 configure.post_args \"
 configure.args      release no-universal no-client no-ice
