Changes to use qt4 portgroup. Add debug variant and related patch code, to match qt 4.7's needs. Add in use of speex.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72600 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/mumble/Portfile
+++ b/dports/aqua/mumble/Portfile
@@ -2,10 +2,11 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
 
 name                mumble
 version             1.2.2
-revision            2
+revision            3
 categories          aqua audio
 license             GPL
 maintainers         snc openmaintainer
@@ -27,22 +28,46 @@ livecheck.type      regex
 livecheck.url       http://sourceforge.net/project/showfiles.php?group_id=147372&package_id=162594
 livecheck.regex     "${name}-(\\d+\\.\\d+\\.\\d+)${extract.suffix}"
 
-depends_lib \
-    port:qt4-mac \
+depends_lib-append \
     port:openssl \
     port:portaudio \
     port:ice-cpp \
     port:libsndfile \
-    port:protobuf-cpp
+    port:protobuf-cpp \
+    lib:pkgconfig/speex.pc:speex
 
-depends_build \
+depends_build-append \
     port:boost
 
-configure.env       QMAKESPEC=${prefix}/libexec/qt4-mac/mkspecs/macx-g++
-configure.cmd       ${prefix}/libexec/qt4-mac/bin/qmake
+configure.args
+
+variant debug description "Build as both release and debug" {}
+
+post-patch {
+    # when not doing debug ...
+    if {![variant_isset debug]} {
+        # ... build just the release version
+        configure.args-append release
+        foreach fixfile [exec find ${worksrcpath} -name "*.pr*"] {
+            reinplace "s@debug_and_release@release@" ${fixfile}
+        }
+    } else {
+        # else build both debug and release
+        configure.args-append debug_and_release
+    }
+
+    # Fix LIBPATH -> QMAKE_LIBPATH per Qt 4.7's warnings
+    foreach fixfile [exec find ${worksrcpath} -name "*.pr*"] {
+        reinplace "s@LIBPATH@QMAKE_LIBDIR@" ${fixfile}
+    }
+}
+
+configure.env-append QMAKESPEC=${qt_mkspecs_dir}/macx-g++
+configure.cmd       ${qt_qmake_cmd}
 configure.pre_args  CONFIG+=\"
 configure.post_args \" DEFINES+=NO_UPDATE_CHECK main.pro
-configure.args      release no-dbus no-universal no-server
+configure.args-append no-dbus no-universal no-server \
+    no-embed-qt-translations no-bundled-speex
 
 variant dbus description {Build DBus support} {
     configure.args-delete no-dbus
@@ -52,7 +77,7 @@ variant universal {
     configure.args-delete no-universal
 }
 
-build.env       QMAKESPEC=${prefix}/libexec/qt4-mac/mkspecs/macx-g++
+build.env-append    QMAKESPEC=${qt_mkspecs_dir}/macx-g++
 
 destroot {
     file copy ${worksrcpath}/release/Mumble.app ${prefix}${applications_dir}/Mumble.app
