--- a/dports/aqua/djview/Portfile
+++ b/dports/aqua/djview/Portfile
@@ -2,10 +2,11 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
 
 name                djview
 version             4.5
-revision            1
+revision            2
 categories          aqua graphics www
 maintainers         nomaintainer
 platforms           darwin
@@ -26,21 +27,13 @@ checksums           md5     0461a26dbcac33dcc5eb7955ac357504 \
                     sha1    d2fd259aa88f80393767f6dec921463da7820143 \
                     rmd160  256abad9cc6d661ba19caf209b74d9937eec4bce
 
-use_parallel_build  yes
-
-depends_build \
-    path:bin/pkg-config:pkgconfig
-
-depends_lib \
+depends_lib-append \
     port:djvulibre \
-    port:qt4-mac
-
-configure.env             QTDIR=${prefix}/libexec/qt4-mac
 
 configure.args \
     --disable-nsdejavu \
     --disable-desktopfiles \
-    QMAKESPEC=macx-g++
+    QMAKESPEC=${qt_mkspecs_dir}/macx-g++
 
 universal_variant no
 
